<resources>
    <string name="app_name">Nicehash</string>
    <string name="app_version">Версия приложения</string>
    <string name="app_build">Номер сборки</string>

    <string name="title_choose">Miners</string>
    <string name="title_settings">Settings</string>

    <string name="currency_base">Base currency</string>
    <string name="currency_popular">Popular</string>
    <string name="currency_all">All</string>
    <string name="currency_btc">BTC</string>
    <string name="currency_usd">USD</string>
    <string name="currency_rub">RUB</string>
    <string name="currency_eur">EUR</string>
    <string name="currency_eng">GBP</string>
    <string name="currency_aud">AUD</string>
    <string name="currency_bgn">BGN</string>
    <string name="currency_brl">BRL</string>
    <string name="currency_cad">CAD</string>
    <string name="currency_chf">CHF</string>
    <string name="currency_cny">CNY</string>
    <string name="currency_czk">CZK</string>
    <string name="currency_dkk">DKK</string>

    <string name="settings_notifications">Notifications</string>
    <string name="settings_themes">Themes</string>
    <string name="settings_themes_preview">Themes preview</string>
    <string name="settings_themes_light">Light</string>
    <string name="settings_themes_dark">Dark</string>
    <string name="settings_default_tab">Default tab</string>
    <string name="settings_language">Language</string>
    <string name="settings_nicehash">NICEHASH</string>
    <string name="settings_currencies"><![CDATA[Currencies & Rates]]></string>
    <string name="settings_status">Service status</string>
    <string name="settings_about">About</string>
    <string name="settings_purchases">Purchases</string>
    <string name="settings_credits"><![CDATA[\@ Alex Solonsky & Alex Gladkov, 2018]]></string>
    <string name="settings_income">Income</string>
    <string name="settings_balance">Balance</string>
    <string name="settings_payouts">Payouts</string>
    <string name="settings_workers">Workers</string>
    <string name="settings_language_chinese">Chinese</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_russian">Russian</string>

    <string name="about_learn_more">LEARN MORE</string>
    <string name="about_authors">FOLLOW AUTHORS</string>
    <string name="about_apps">OUR APPS</string>
    <string name="about_website">Website</string>
    <string name="about_website_subtitle">getsignal.co</string>
    <string name="about_twitter">Twitter</string>
    <string name="about_twitter_subtitle">News and Updates</string>
    <string name="about_client">Alex Solonsky</string>
    <string name="about_client_subtitle">Design</string>
    <string name="about_author">Alex Gladkov</string>
    <string name="about_author_subtitle">Code</string>
    <string name="about_apps_saver">Saver</string>
    <string name="about_apps_saver_subtitle">iOS</string>
    <string name="about_subline">Mining monitor</string>
    
    <string name="notifications_nicehash">NICEHASH</string>
    <string name="notifications_worker">WORKER / ALGO DOWN</string>
    <string name="notifications_payments">Payments</string>
    <string name="notifications_maintenance">Maintenance</string>
    <string name="notifications_top">Top</string>
    <string name="notifications_bottom">Bottom</string>
    <string name="notifications_strix">Strix</string>
    <string name="notifications_sound">Sound</string>
    <string name="notifications_vibro">Vibro</string>
    
    <string name="purhases_features">FEATURES</string>
    <string name="purchases_themes">Themes</string>
    <string name="purchases_miner">Add miner</string>
    <string name="purchases_remove_ads">Remove ads</string>
    <string name="purchases_silver_title">Silver</string>
    <string name="purchases_gold_title">Gold</string>
    <string name="purchases_silver_subtitle">No ads, Themes, 3 miners</string>
    <string name="purchases_gold_subtitle">No ads, Themes, 6 months notifications</string>

    <string name="tab_income">Income</string>
    <string name="tab_workers">Workers</string>
    <string name="tab_payouts">Payouts</string>
    <string name="tab_balance">Balance</string>

    <string name="toast_added">Added</string>
    <string name="toast_saved">Saved</string>

    <string name="income_hour">Hour</string>
    <string name="income_day">Day</string>
    <string name="income_week">Week</string>
    <string name="income_month">Month</string>
    <string name="income_btc_usd">BTC/USD =</string>

    <string name="balance_title">Balance</string>
    <string name="balance_income">Income/Day</string>
    <string name="balance_algo_speed">/s</string>
    <string name="balance_no_items">У вас нет истории баланса</string>

    <string name="add_name">Miner name</string>
    <string name="add_btc_address">Nicehash BTC address</string>
    <string name="add_miner_title">Add miner</string>
    <string name="edit_miner_title">Edit miner</string>

    <string name="miner_more_edit">Edit</string>
    <string name="miner_more_delete">Delete</string>

    <string name="workers_diff">Diff</string>
    <string name="workers_time">min</string>
    <string name="workers_no_items">No workers data</string>

    <string name="payout_fee_title">FEE&#160;·&#160;</string>
    <string name="payout_no_items">No payouts</string>

    <string name="cost_2">2$</string>
    <string name="cost_5">5$</string>
    <string name="cost_7">7$</string>

    <string name="chart_one_hour">1h</string>
    <string name="chart_six_hours">6h</string>
    <string name="chart_twelve_hours">12h</string>
    <string name="chart_one_day">1d</string>
    <string name="chart_three_days">3d</string>
    <string name="chart_all">All</string>
    <string name="chart_no_data">No chart data</string>

    <string name="template_btc_day">0.0019</string>
    <string name="template_rub_day">2,157.98</string>
    <string name="template_btc_day_title">BTC/Day</string>
    <string name="template_rub_day_title">RUB/Day</string>
    <string name="template_rub_hour">83.16</string>
    <string name="template_btc_hour">0.00016032</string>

    <string name="purchase_unavailable">Purchases are not available</string>

    <string name="navigation_bar_balance_left">Unpaid BTC</string>
    <string name="navigation_bar_balance_right">USD</string>
    <string name="navigation_bar_payout_left">BTC paid</string>
    <string name="navigation_bar_payout_right">USD</string>
    <string name="navigation_bar_workers_left">Workers online</string>
    <string name="navigation_bar_workers_right">Rigs online</string>
    <string name="navigation_bar_income_left">BTC/Day</string>

</resources>
